# KoyejoLab-Robustness-Chinchilla-Compute-Optimal-Scaling

./: .gitignore  CLAUDE.md  README.md  README_dark_matter.md  data_analysis.ipynb  flake.nix  pyproject.toml  requirements.txt
.run/: 00_assessing_parameters.run.xml  00_correcting_parameters.run.xml  01_epoch_research_fitting.run.xml  02_robustness_analysis.py.run.xml  03_robustness_schematic.py.run.xml
data/: README.md  chinchilla_model_parameters.csv
manuscript/: 00_icml2026.tex  01_introduction.tex  02_model_params.tex  03_robustness_analysis.tex  97_appendix_related_work.tex  99_appendix_analytics.tex  references_rylan.bib
manuscript_tmlr/: .gitignore  01_introduction.tex  02_model_params.tex  03_robustness_analysis.tex  04_discussion.tex  98_appendix_chinchilla_table.tex  main.tex  math_commands.tex
notebooks/00_assessing_parameters/: 00_assessing_parameters.py
notebooks/00_correcting_parameters/: 00_correcting_parameters.py
notebooks/01_epoch_research_fitting/: 01_epoch_research_fitting.py
notebooks/02_robustness_analysis/: 02_robustness_analysis.py
notebooks/03_robustness_schematic/: 03_robustness_schematic.py
results/dark_matter_analysis/: dark_matter_improvements.csv  dark_matter_summary_results.csv
reviews/2026_icml/: PROMISED_ICML_2026_CHANGES.md  REBUTTAL_STRATEGY.md  REVIEWS.md  rebuttal_CheF.md  rebuttal_EBqg.md  rebuttal_rRfE.md  rebuttal_v5yx.md
src/: analyze.py  dark_matter_scaling.py  epoch_research_chinchilla_fit.py  plot.py  test_dark_matter_hypothesis.py
src/rechinchilla/: analyze.py
(+8 files in other folders)
